newscard btns alignment fix *uckin smalller devices

--- a/src/components/home/CardSlider.module.css
+++ b/src/components/home/CardSlider.module.css
@@ -60,4 +60,8 @@
   .card {
     width: calc(100% - 20px);
   }
+
+  .btns {
+    display: none;
+  }
 }
