--- a/src/components/styles/ScoreCard.module.css
+++ b/src/components/styles/ScoreCard.module.css
@@ -130,7 +130,7 @@
 @media (max-width: 576px) {
   .matchCardsButtons a {
     height: 3rem;
-    padding: 0.4rem 2.2rem;
+    padding: 0.4rem 5.2%;
   }
 
   .scoreCardContainer {
